mv lib/spec to spec

--- a/spec/ut.dc.yaml
+++ b/spec/ut.dc.yaml
@@ -1,7 +1,7 @@
 ---
-- name: testDC
+- name: DatacenterCF
   mob:  dc-1
-  clusters: 
+  clusters:
   - name: Cluster1
     mob: cs1
     resource_pool:
