--- a/spec/ut.vc.yaml
+++ b/spec/ut.vc.yaml
@@ -7,8 +7,9 @@ vc_pwd: 1234abcd
 vc_datacenter: DatacenterCF
 vc_clusters: 
   - name: Cluster1
-    vc_rps: resoure_pool1
+    vc_rps: 
+    - resource_pool1
 vc_shared_datastore_patten: share
 vc_local_datastare_patten: local
-cloud_adapter: fog
+cloud_adapter: ut
 
