--- a/spec/ut.dc_def1.yaml
+++ b/spec/ut.dc_def1.yaml
@@ -3,11 +3,27 @@ name: vhelper
 channel_id: provsion
 template_id: /Datacenters/DatacenterCF/vm/tt
 groups:
-- name: group1
-  cpu: 1
-  mem: 512
+- name: group0
+  cpu: 2
+  mem: 1024
   storage:
     type: share
-    size: 200
+    size: 30
   network: CFNetwork
   instance_num: 2
+- name: group1
+  cpu: 2
+  mem: 2048
+  storage:
+    type: share
+    size: 20    #SIZE in GB
+  network: CFNetwork
+  instance_num: 5
+- name: group2
+  cpu: 2
+  mem: 2048
+  storage:
+    type: share
+    size: 40
+  network: CFNetwork
+  instance_num: 5
