--- a/spec/ut.wdc.yaml
+++ b/spec/ut.wdc.yaml
@@ -8,7 +8,7 @@ vc_clusters:
   - name: cluster-fog
     vc_rps: 
     - resource_pool1
-vc_shared_datastore_patten: [Enclosure]
-vc_local_datastore_patten: [local]
+vc_shared_datastore_pattern: ["Enclosure"]
+vc_local_datastore_pattern: ["local"]
 cloud_adapter: fog
 
