vm_group memory definition bug fix, and add some debug messages.

--- a/spec/ut.dc_def1.yaml
+++ b/spec/ut.dc_def1.yaml
@@ -5,7 +5,7 @@ template_id: /Datacenters/DatacenterCF/vm/tt
 groups:
 - name: group0
   cpu: 2
-  mem: 1024
+  memory: 1024
   storage:
     type: share
     size: 30
@@ -16,7 +16,7 @@ groups:
   mem: 2048
   storage:
     type: share
-    size: 20    #SIZE in GB
+    size: 200    #SIZE in GB
   network: CFNetwork
   instance_num: 5
 - name: group2
@@ -24,6 +24,6 @@ groups:
   mem: 2048
   storage:
     type: share
-    size: 40
+    size: 400
   network: CFNetwork
   instance_num: 5
