--- a/spec/ut.wdc_def.yaml
+++ b/spec/ut.wdc_def.yaml
@@ -1,8 +1,8 @@
 ---
 name: vhelper
 channel_id: provsion
-#template_id: centos58-x64
-template_id: centos-5.7-template
+template_id: centos58-x64
+#template_id: centos-5.7-template
 groups:
 - name: NameNode 
   cpu: 2
@@ -11,7 +11,7 @@ groups:
     type: share
     size: 20
   network: CFNetwork
-  instance_num: 1
+  instance_num: 2
 - name: DataNode
   cpu: 1
   memory: 2048
