--- a/spec/ut.vc.yaml
+++ b/spec/ut.vc.yaml
@@ -10,7 +10,7 @@ vc_clusters:
     vc_rps:
     - resource_pool1
     - resource_pool2
-vc_shared_datastore_pattern: [share]
+vc_shared_datastore_pattern: [share, tta]
 vc_local_datastore_pattern: [local]
 cloud_adapter: ut
 
