--- a/spec/ut.dc_def1.yaml
+++ b/spec/ut.dc_def1.yaml
@@ -22,7 +22,6 @@ groups:
   vc_clusters:
   - name: Cluster1
     vc_rps:
-    - resource_pool1
     - resource_pool2
 - name: group2
   cpu: 2
@@ -30,5 +29,9 @@ groups:
   storage:
     type: share
     size: 40
+  vc_clusters:
+  - name: Cluster1
+    vc_rps:
+    - resource_pool3
   network: CFNetwork
   instance_num: 5
