--- a/spec/ut.vc.yaml
+++ b/spec/ut.vc.yaml
@@ -9,8 +9,10 @@ vc_clusters:
   - name: Cluster1
     vc_rps:
     - resource_pool1
-    - resource_pool2
     - resource_pool3
+  - name: Cluster2
+    vc_rps:
+    - resource_pool2
 vc_shared_datastore_pattern: [share, tta]
 vc_local_datastore_pattern: [local]
 cloud_adapter: ut
