--- a/spec/ut.dc_def1.yaml
+++ b/spec/ut.dc_def1.yaml
@@ -19,19 +19,19 @@ groups:
     size: 20    #SIZE in GB
   network: CFNetwork
   instance_num: 5
-  vc_clusters:
-  - name: Cluster2
-    vc_rps:
-    - resource_pool2
+#  vc_clusters:
+#  - name: Cluster2
+#    vc_rps:
+#    - resource_pool2
 - name: group2
   cpu: 2
   memory: 2048
   storage:
     type: share
     size: 40
-  vc_clusters:
-  - name: Cluster1
-    vc_rps:
-    - resource_pool3
+#  vc_clusters:
+#  - name: Cluster1
+#    vc_rps:
+#    - resource_pool3
   network: CFNetwork
   instance_num: 5
