--- a/spec/ut.vc.yaml
+++ b/spec/ut.vc.yaml
@@ -1,9 +1,9 @@
 ---
 name: vsphere
 #vc_address: 10.117.37.111
-vc_addr: 10.117.37.17
-vc_user: administrator
-vc_pwd: 1234abcd
+vc_addr: 0.0.0.0
+vc_user: ut
+vc_pwd: tested
 vc_datacenter: DatacenterCF
 vc_clusters:
   - name: Cluster1
