--- a/spec/ut.wdc_def.yaml
+++ b/spec/ut.wdc_def.yaml
@@ -1,30 +1,34 @@
 ---
-name: vhelper
+name: vhelper2
 channel_id: provsion
-template_id: centos58-x64
-vc_clusters: 
-- name: cluster-fog
-  vc_rps: 
-  - resource_pool1
+template_id: IP_Mgr
+networking:
+  - port_group: wdc-vhadp-pub2
+    type: static
+    ip:
+    - "10.141.72.61-10.141.72.70"
+    netmask: "255.255.254.0"
+    gateway: "10.141.73.253"
+    dns: 
+    - "10.132.71.1"
+    - "10.132.71.2"
+
+#vc_clusters: 
 #template_id: centos-5.7-template
 groups:
 - name: NameNode 
   cpu: 2
   memory: 1024
   storage:
-    type: share
+    type: local
     size: 20
   network: CFNetwork
-  instance_num: 3
+  instance_num: 1
 - name: DataNode
   cpu: 1
   memory: 2048
   storage:
-    type: share
+    type: local
     size: 30
-  vc_clusters: 
-  - name: cluster-ironfan
-    vc_rps:
-    - rp2-res-manager
   network: CFNetwork
   instance_num: 1
