--- a/spec/ut.dc_def1.yaml
+++ b/spec/ut.dc_def1.yaml
@@ -11,6 +11,19 @@ networking:
     dns: 
     - "10.1.100.100"
     - "10.1.100.240"
+  - port_group: CFNetwork1
+    type: dhcp
+  - port_group: CFNetwork2
+    type: static
+    ip: 
+    - "10.2.1.190-10.2.1.202"
+    - "10.2.1.10-10.2.1.20"
+    netmask: "255.255.255.0"
+    gateway: "10.2.1.254"
+    dns: 
+    - "10.2.100.100"
+    - "10.2.100.240"
+
 template_id: /Datacenters/DatacenterCF/vm/tt
 groups:
 - name: group0
