--- a/spec/ut.wdc.yaml
+++ b/spec/ut.wdc.yaml
@@ -4,14 +4,15 @@ vc_addr: 10.141.7.39
 vc_user: administrator
 vc_pwd: ca$hc0w
 vc_datacenter: Datacenter2012
-vc_clusters: 
+vc_clusters:
   - name: cluster-integration
-    vc_rps: 
+    vc_rps:
     - resource_pool1
-#  - name: cluster-ironfan
-#    vc_rps:
-#    - rp2-res-manager
-vc_shared_datastore_pattern: ["h06-ds0[1]"]
-vc_local_datastore_pattern: ["h06-ds0[23456789]"]
+    - test-1
+  - name: cluster-ironfan
+    vc_rps:
+    - rp2-res-manager
+vc_shared_datastore_pattern: ["h06-ds0[1]", "Enclosure_Local_Disk_10"]
+vc_local_datastore_pattern: ["h06-ds0[23456789]", "Enclosure_Local_Disk"]
 cloud_adapter: fog
 
