add wildcard match with datastore

--- a/spec/ut.dc_def1.yaml
+++ b/spec/ut.dc_def1.yaml
@@ -37,6 +37,7 @@ groups:
   cpu: 2
   memory: 1024
   storage:
+    name_patten: '*-ds*'
     type: shared
     size: 30    #SIZE in GB
   instance_num: 5
