1. remove all trailed space in end of a line 2. add port group check in placement

--- a/spec/ut.dc.yaml
+++ b/spec/ut.dc.yaml
@@ -1,6 +1,10 @@
 ---
 - name: DatacenterCF
   mob:  dc-1
+  portgroup:
+    CFNetwork: test1
+    CFNetwork1: test2
+    CFNetwork2: test3
   clusters:
   - name: Cluster1
     mob: cs1
