1. remove allow_mixed_datastores 2. add error checking in create_cloud_provider 3. Change some returen error message 4. Add swap disk size limitation (less than 12G) 5. Fix same resource pool name bug

--- a/spec/ut.wdc.yaml
+++ b/spec/ut.wdc.yaml
@@ -2,8 +2,7 @@
 name: vsphere
 vc_addr: 10.141.7.39
 vc_user: administrator
-#vc_pwd: ca$hc0w
-vc_pwd: ca$dd
+vc_pwd: ca$hc0w
 vc_datacenter: Datacenter2012
 vc_clusters:
   - name: cluster-integration
