--- a/spec/ut.wdc.yaml
+++ b/spec/ut.wdc.yaml
@@ -5,12 +5,14 @@ vc_user: administrator
 vc_pwd: ca$hc0w
 vc_datacenter: Datacenter2012
 vc_clusters:
-  - name: cluster-integration
-    vc_rps:
-    - resource_pool1
-    - test-1
-    - rp3
-vc_shared_datastore_pattern: ["h06-ds01",]
+- name: cluster-resrcmgmt
+  vc_rps:
+  - haiyu-test1
+  - haiyu-test2
+- name: cluster-integration
+  vc_rps:
+  - rp3
+vc_shared_datastore_pattern: ["h06-ds01","Enclosure_Local_Disk_12(2)"]
 vc_local_datastore_pattern: ["h06-ds*", "Enclosure_Local_Disk*"]
 cloud_adapter: fog
 
