--- a/spec/ut.wdc_def.yaml
+++ b/spec/ut.wdc_def.yaml
@@ -15,6 +15,8 @@ networking:
     - "10.132.71.1"
     - "10.132.71.2"
 
+vc_shared_datastore_pattern: ["h06-ds01","Enclosure_Local_Disk_12(2)"]
+vc_local_datastore_pattern: ["h06-ds*", "Enclosure_Local_Disk*"]
 #vc_clusters:
 groups:
 - name: NameNode
