--- a/spec/ut.wdc_def.yaml
+++ b/spec/ut.wdc_def.yaml
@@ -14,9 +14,12 @@ networking:
     dns:
     - "10.132.71.1"
     - "10.132.71.2"
+vc_clusters:
+- name: cluster-resrcmgmt
+  vc_rps:
+  - haiyu-test1
+  - haiyu-test2
 
-vc_shared_datastore_pattern: ["h06-ds01","Enclosure_Local_Disk_12(2)"]
-vc_local_datastore_pattern: ["h06-ds*", "Enclosure_Local_Disk*"]
 #vc_clusters:
 groups:
 - name: NameNode
