1. add more information on README.rdoc 2. make error_msg more smaller during placement 3. add parameter dc_mob for get_vm_mob_ref_by_moid to support UT process 4. add VM_STATE_DELETED state to show the correct state, if we deleted wrong vm 5. ip_address will return '', if vm is deleted or not powered on 6. init error_code to zero, to avoid crash 7. add place_rp check. and return error message to CLI 8. change mov_vm_if_existed to mov_vm 9. remove some unused comments

--- a/spec/ut.dc.yaml
+++ b/spec/ut.dc.yaml
@@ -1,6 +1,11 @@
 ---
 - name: DatacenterCF
   mob:  dc-1
+  template_vm:
+    disks:
+    - size: 3000
+      path: "[test-ds] template_vm/system.vmdk"
+      scsi_num: 0
   portgroup:
     CFNetwork: test1
     CFNetwork1: test2
