--- a/spec/ut.dc_def1.yaml
+++ b/spec/ut.dc_def1.yaml
@@ -53,8 +53,8 @@ groups:
   storage:
     type: shared
     size: 40
-#  vc_clusters:
-#  - name: Cluster1
-#    vc_rps:
-#    - resource_pool3
+  vc_clusters:
+  - name: Cluster1
+    vc_rps:
+    - resource_pool9
   instance_num: 4
