change code style add cloud_func_test remove unused test files

--- a/spec/ut.dc.yaml
+++ b/spec/ut.dc.yaml
@@ -2,6 +2,8 @@
 - name: DatacenterCF
   mob:  dc-1
   template_vm:
+    name: test_template_vm
+    hostname: test_template_host
     disks:
     - size: 3000
       path: "[test-ds] template_vm/system.vmdk"
